# Profiler-Bot

./: helpers.py  leagueClasses.py  leagueHelpers.py  leagueOfLeg.py  main.py  pyproject.toml  requirements.txt  riotGames.py  user.py  valorantWebScraping.py
games/: leagueClasses.py  leagueStats.py  valorantStats.py  wildStats.py
helpers/: db.py  helperFuncs.py  helpfulFunctions.py  leagueHelpers.py  mongoDB.py  proxies.py  valSeasons.py  valorantHelpers.py
