[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
jdcloud-wsgi-wrapper = "^1.3"
requests = "^2.27.1"
replit = "^3.2.4"
python-dotenv = "^0.19.2"
discord = "^1.7.3"
beautifulsoup4 = "^4.10.0"
firebase-admin = "^5.2.0"
pymongo = "^4.0.2"
dnspython = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"